# Pong

./: CMakeCache.txt  CMakeLists.txt  Dockerfile  Makefile  Pong  ReadMe.md  bozza.txt  build.sh  cmake_install.cmake  conanfile.txt  gitignore  updateDependencies.sh
cmake/: ProjectConfig.cmake  extra.cmake  update_extra.sh
src/: AIPlayer.cpp  AIPlayer.h  AbstractPlayer.h  Ball.cpp  Ball.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  HumanPlayer.cpp  HumanPlayer.h  Observer.h  Paddle.cpp  Paddle.h  Score.cpp  Score.h  main.cpp
